tests/baselines/reference/LanguageServiceHost/reportsFailedLoads/test.errors.txt
error TS6151: Extension loading failed with error 'Error: Host could not locate extension 'test-semantic-lint'.
                    Stack trace:
                    Error: Host could not locate extension 'test-semantic-lint'.
    at F:\Repos\TypeScript\built\local\run.js:42948:33'.
error TS6151: Extension loading failed with error 'Error: Host could not locate extension 'test-syntactic-lint'.
                    Stack trace:
                    Error: Host could not locate extension 'test-syntactic-lint'.
    at F:\Repos\TypeScript\built\local\run.js:42948:33'.


!!! error TS6151: Extension loading failed with error 'Error: Host could not locate extension 'test-semantic-lint'.
!!! error TS6151:                     Stack trace:
!!! error TS6151:                     Error: Host could not locate extension 'test-semantic-lint'.
!!! error TS6151:     at F:\Repos\TypeScript\built\local\run.js:42948:33'.
!!! error TS6151: Extension loading failed with error 'Error: Host could not locate extension 'test-syntactic-lint'.
!!! error TS6151:                     Stack trace:
!!! error TS6151:                     Error: Host could not locate extension 'test-syntactic-lint'.
!!! error TS6151:     at F:\Repos\TypeScript\built\local\run.js:42948:33'.
==== /hello.ts (0 errors) ====
    console.log("Hello, world!");